# aperiodos

./: .aperiodic-generator-settings.json  .dockerignore  .gitignore  A4  Dockerfile  LICENSE  README.md  aperiodic-generator  deploy.sh  main.py  pyrightconfig.json  requirements.txt
.github/workflows/: deploy-pages.yml
dev/: INSTRUCTIONS.md  debugging.md
penrose/: Cargo.toml
penrose/src/: lib.rs  main.rs  math.rs  render.rs
penrose/src/render/: cartwheel_seed_data_0.txt  cartwheel_seed_data_1.txt  cartwheel_seed_data_2.txt  cartwheel_seed_data_3.txt  cartwheel_seed_data_4.txt  classic_logic.rs  p1_logic.rs  (+1 more)
spectre/: Cargo.toml  README.md  index.html
spectre/benches/: spectre_cluster_bench.rs
spectre/src/: camera.rs  controller.rs  instancing.rs  instancing.wgsl  lib.rs  main.rs  utils.rs
spectre/src/tiles/: anchor.rs  mystic.rs  mystic_cluster.rs  spectre_cluster.rs  spectre_like.rs
spectre/src/utils/: aabb.rs  angle.rs  hex_vec.rs
src/donations/: __init__.py  stripe_sponsors.py
src/einstein_backend/: __init__.py  cli.py  graphics_cv2.py  graphics_tk.py  pattern_generator.py  seed_to_pattern.py  svg.py
src/entry/: main.py  main_visual.py  web.py
src/pattern_generation/: __init__.py  cli.py  geometry.py  graphics_cv2.py  graphics_tk.py  pattern_generator.py  seed_to_pattern.py
src/root/: __init__.py  main.py  main_visual.py
src/spectre_rs/: Cargo.toml
web/: index.html  package-lock.json  package.json  skills-lock.json  vite.config.js
web/public/: CNAME  robots.txt  sitemap.xml
web/src/: App.jsx  i18n.js  main.jsx  styles.css
(+18 files in other folders)
