[package]
name = "spectre"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.15.1"
bytemuck = { version = "1.21.0", features = ["derive"] }
lyon_tessellation = "1.0.15"
tracing = "0.1.41"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.100"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "spectre_cluster_bench"
harness = false

[profile.release-wasm]
panic = "abort"
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
